--- a/css/fiche.css
+++ b/css/fiche.css
@@ -8,27 +8,67 @@ border: solid 1px rgb(39, 37, 37);
   margin-right: 100px;
   padding: 20px;
 }
+#image{
+    display: flex;
+    padding-top: 10px;
+}
+#image2{
+    display: flex;
+    padding-top: 10px;
+}
+#image3{
+    margin-top: 100px;
+    border: 3px blue solid;
+    width:150px;
+    height:100px;
+    margin-right: 0px;
+}
+#image4{
+    padding: 0px;
+    margin: 0px;
+    border: 1px blue solid;
+    width:150px;
+    height:65px;
+}
 #entete_fiche{
-    font-size: 12px;
+    font-size: 11px;
     border: 1px solid rgb(71, 69, 69);
-    padding-left: 57px;
+    padding-left: 5px;
     padding-bottom: 10px;
-    padding-right: 160px;
+    padding-right: 10px;
     margin-bottom: 10px;
+    display: flex;
+    font-family: "Times New Roman";
+}
+.entete{
+    margin: 0px;
+    padding: 0px;
+}
+#corp_fiche{
+   
     
 }
 
 table
 {
     border-collapse: collapse;
+    font-weight: bold;
+    font-size: 16px;
+    margin-bottom: 10px;
+    font-family: "Times New Roman";
+    margin-left: 0px;
+    width: 660px;
 }   
 #f{
-    color: black;
-    text-decoration-color: white;
+    
+    font-size: 25px;
+    color: white;
 }
 td, th
 {
     border: 1px solid black;
+    padding-left: 10px;
+    padding-right: 5px;
 }
 th{
     text-decoration: underline;
@@ -38,14 +78,13 @@ th{
     text-align: left;
     border: solid 1px rgb(112, 104, 104);
     font-size: 12px;
+    padding-left: 5px;
+    font-weight: bold;
 }
 #un{
     text-align: left;
-    font-size: 15px;
-    padding-right: 5px;
+    font-size: 12px;
 }
-
-#entete{
-    margin-left: 10px;
-    
+strong{
+    font-size: 14px;
 }
